--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,9 @@
     <string name="btn_text_save">SAVE</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="note_text_no_places_found_yet">No favourite places found, please add one </string>
+
+    <string name="image_content_description">image</string>
 
     <string name="google_maps_api_key">AIzaSyBfD7CLBUDG6zK3daq-ARCe6_q50E-pSso</string>
 </resources>
