--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,5 +13,7 @@
 
     <string name="image_content_description">image</string>
 
+    <string name="btn_text_view_on_map">VIEW ON MAP</string>
+
     <string name="google_maps_api_key">AIzaSyBfD7CLBUDG6zK3daq-ARCe6_q50E-pSso</string>
 </resources>
